# cookiecutter-basicpythonproject

./: README.md  cookiecutter.json
{{cookiecutter.module_name}}/: .coveragerc  LICENSE  LICENSE.txt  MANIFEST.in  README.md  code_of_conduct.md  pyproject.toml  setup.py
{{cookiecutter.module_name}}/src/{{cookiecutter.module_name}}/: __init__.py  __main__.py
{{cookiecutter.module_name}}/src/{{cookiecutter.project_name}}/: __init__.py
{{cookiecutter.module_name}}/tests/: test_{{cookiecutter.module_name}}.py
{{cookiecutter.project_name}}/: .gitignore  README.md  setup.py
{{cookiecutter.project_name}}/docs/: conf.py  index.rst
{{cookiecutter.project_name}}/src/{{cookiecutter.project_name}}/: __main__.py
{{cookiecutter.project_name}}/tests/: test_{{cookiecutter.module_name}}.py
