[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "{{ cookiecutter.project_name }}"
authors = [
    {name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}"},
]
description = "{{ cookiecutter.project_short_description }}"
readme = "README.md"
# keywords = ["TODO_KEYWORD_1", "TODO_KEYWORD_2"]
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.7"
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.module_name }}"
"Bug Tracker" = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.module_name }}/issues"

[tool.setuptools.dynamic]
version = {attr = "{{ cookiecutter.module_name }}.__version__"}
